fix z-index

--- a/src/app/components/common/Header/Header.module.scss
+++ b/src/app/components/common/Header/Header.module.scss
@@ -7,7 +7,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 0;
+  // z-index: 0;
   &::before {
     content: "";
     width: 600px;
